Fix command injection vulnerability in NativeLibraryLoader
Replace Runtime.exec() with ProcessBuilder to prevent shell injection
in install_name_tool and codesign commands on macOS. Use separate
arguments instead of string concatenation for secure command execution.